--- a/application.properties
+++ b/application.properties
@@ -2,6 +2,7 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=lex
 spring.datasource.password=lex
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 logging.file.name=WeCARE.log
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
