--- a/BookingMS.properties
+++ b/BookingMS.properties
@@ -1,1 +1,3 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/wecare-booking
+user.uri=http://localhost:6001/users/
+coach.uri=http://localhost:7001/coaches/
