--- a/application.properties
+++ b/application.properties
@@ -13,3 +13,4 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
+eureka.client.service-url.defaultZone=http://localhost:2222/eureka
