--- a/application.properties
+++ b/application.properties
@@ -14,3 +14,6 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 eureka.client.service-url.defaultZone=http://localhost:2222/eureka
+
+spring.sleuth.sampler.percentage=1.0
+spring.zipkin.baseUrl=http://localhost:4444
